[gd_scene load_steps=8 format=3 uid="uid://c1iksueyw2f4d"]

[ext_resource type="Script" path="res://script/apple_tree.gd" id="1_vwvmt"]
[ext_resource type="Resource" uid="uid://01yyp5q1nvp0" path="res://inventory/items/apple.tres" id="2_pypre"]
[ext_resource type="Texture2D" uid="uid://e3gpm00m3uyb" path="res://art/assets/survivalgame-appletree.png" id="2_ur5yn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xkpt2"]
atlas = ExtResource("2_ur5yn")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_k102d"]
atlas = ExtResource("2_ur5yn")
region = Rect2(80, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_0xeqn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkpt2")
}],
"loop": true,
"name": &"apples",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k102d")
}],
"loop": true,
"name": &"no_apples",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jio5r"]
radius = 41.1096

[node name="apple_tree" type="Node2D"]
script = ExtResource("1_vwvmt")
item = ExtResource("2_pypre")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0xeqn")
animation = &"no_apples"

[node name="pickable_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickable_area"]
shape = SubResource("CircleShape2D_jio5r")

[node name="growth_Timer" type="Timer" parent="."]
wait_time = 3.557
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]

[connection signal="body_entered" from="pickable_area" to="." method="_on_pickable_area_body_entered"]
[connection signal="body_exited" from="pickable_area" to="." method="_on_pickable_area_body_exited"]
[connection signal="timeout" from="growth_Timer" to="." method="_on_growth_timer_timeout"]
